<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">


    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/signInEmailId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />

    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/signInPasswordId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/signInButtonId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in" />

    <TextView
        android:id="@+id/signUpTextViewId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_not_registered_sign_up" />

    <ProgressBar
        android:layout_marginTop="60dp"
        android:id="@+id/signInProgressBarId"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>