<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/signUpNameId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"
        />

    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/signUpEmailId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />

    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/signUpReEnterEmailId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="Re-enter email address" />

    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/signUpPasswordId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password" />
    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/signUpReEnterPasswordId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="Re-enter your password" />
    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/signUpButtonId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up" />

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/signInTextViewId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_already_registered_sign_in" />

    <ProgressBar
        android:id="@+id/signUpProgressBarId"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" />
    </LinearLayout>
</ScrollView>